# hack-the-body

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  lint.sh
.github/workflows/: build.yml  docker.yml
compose/: .env.example  docker-compose.yml
docs/: coach-debugging.md  pi-kiosk-setup.md
docs/superpowers/plans/: 2026-04-24-phase-0-1-data-spine.md  2026-04-27-prescriptive-nudges.md  2026-04-29-food-history-day-navigator.md  2026-05-05-hevy-strength-integration.md  2026-05-10-coach-v2-slice-1-findings.md  2026-05-10-coach-v2-slice-2-chat-tools.md  2026-05-10-coach-v2-slice-3-habits.md  2026-05-19-coach-anchors-and-ack.md  2026-05-19-unify-day-phase-into-coach.md
docs/superpowers/specs/: 2026-04-24-hack-the-body-design.md  2026-04-27-prescriptive-nudges-design.md  2026-04-27-protocol-system-vision.md  2026-04-27-sleep-accountability-loop-design.md  2026-04-29-food-history-day-navigator-design.md  2026-05-01-treadmill-tracker-design.md  2026-05-05-hevy-strength-integration-design.md  2026-05-10-coach-v2-design.md  2026-05-14-kiosk-redesign.md  2026-05-15-coach-notes-and-profile-design.md  2026-05-16-usuals-management-design.md  2026-05-18-coach-anchors-and-ack-design.md  2026-05-19-unify-day-phase-into-coach-design.md
scripts/: exit-node-window.sh  garmin-login.py  garmin-session-replay.py
services/api/: Dockerfile  pyproject.toml
services/api/app/: auth.py  config.py  db.py  main.py
services/api/app/models/: food.py  metrics.py  workout.py
services/api/app/routers/: admin.py  audit.py  auth.py  coach.py  foods.py  habits.py  meals.py  metrics.py  nudges.py  profile.py  push.py  vitamins.py  water.py  webhooks.py  workouts.py
services/api/app/services/: audit.py  coach.py  coach_weekly.py  food_parser.py  food_repo.py  metrics_repo.py  nudge_dismissals.py  nudges.py  openfoodfacts.py  push.py  scheduler.py  treadmill_aggregator.py  usda_fdc.py  usuals_miner.py  usuals_suggest.py  weight_projection.py
services/api/app/services/coach/: __init__.py  brief.py  chat.py  context.py  habits.py  phase.py  threads.py  tools.py
services/api/evals/: food_parse_cases.json  run_food_parse.py
services/api/tests/: conftest.py  test_admin.py  test_audit.py  test_auth.py  test_auth_login.py  test_coach.py  test_coach_ack.py  test_coach_anchors.py  test_coach_chat.py  test_coach_kiosk.py  test_coach_kiosk_prompt.py  test_coach_phase.py  test_coach_tools.py  test_coach_weekly.py  test_db.py  test_findings.py  test_food_parse.py  test_foods_meals.py  test_habits.py  test_habits_router.py  test_health.py  test_metrics_repo.py  test_metrics_routes.py  test_models.py  test_nudges_engine.py  test_nudges_router.py  test_nudges_scheduler.py  test_openfoodfacts.py  test_profile.py  test_threads.py  test_treadmill_aggregator.py  test_usda_fdc.py  test_usuals_suggest.py  test_vitamins.py  test_water.py  test_webhooks.py  test_weight_projection.py  test_workouts_detail.py
services/ingestor-garmin/: Dockerfile  pyproject.toml
services/ingestor-garmin/app/: cleanup_garmin_dupes.py  cleanup_treadmill_dupes.py  cleanup_treadmill_subthreshold.py  config.py  garmin_client.py  main.py  mappers.py  models.py  repo.py  runner.py  tcx.py  treadmill_uploader.py
services/ingestor-garmin/tests/: conftest.py  test_garmin_client.py  test_mappers.py  test_repo.py  test_runner.py  test_tcx.py  test_treadmill_uploader.py
services/ingestor-garmin/tests/fixtures/: body_comp.json  daily_summary.json  hrv.json  intraday_steps.json  sleep.json  vo2max.json  weight.json  workout.json
services/ingestor-hevy/: Dockerfile  pyproject.toml
services/ingestor-hevy/app/: config.py  hevy_client.py  main.py  mappers.py  models.py  repo.py  runner.py
services/ingestor-hevy/tests/: test_mappers.py  test_repo.py  test_runner.py
services/ingestor-hevy/tests/fixtures/: workout_strength.json
services/pi-agent/: .env.example  pyproject.toml
services/pi-agent/src/htb_pi_agent/: actions.py  config.py  discovery.py  main.py
services/pi-agent/systemd/: htb-pi-agent.service
services/pi-agent/tests/: test_discovery.py
services/treadmill-tracker/: Dockerfile  pyproject.toml
services/treadmill-tracker/app/: bridge.py  config.py  csafe.py  main.py  parser.py  poller.py  probe_user.py  repo.py
services/treadmill-tracker/tests/: test_poller.py
services/web/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
services/web/public/: config.js  manifest.webmanifest  sw.js
services/web/src/: App.tsx  main.tsx  router.tsx  vite-env.d.ts
services/web/src/api/: client.ts  types.ts
services/web/src/components/: ActiveTreadmillView.tsx  ActiveWorkoutCard.tsx  AuthGate.tsx  BarcodeScanner.tsx  BottomNav.tsx  CoachCard.tsx  CoachChatPanel.test.tsx  CoachChatPanel.tsx  CoachNotesCard.tsx  CoachText.test.tsx  CoachText.tsx  DayNav.test.tsx  DayNav.tsx  EntryTimeEditor.tsx  HabitsCard.test.tsx  HabitsCard.tsx  HrvChart.js  HrvChart.tsx  MacroProgressCard.tsx  MetricCard.js  MetricCard.tsx  NotificationsCard.tsx  NotificationsSettings.tsx  NudgesCard.test.tsx  NudgesCard.tsx  PasteFood.tsx  RootRedirect.tsx  SleepChart.js  SleepChart.tsx  StepsChart.tsx  StepsTodayCard.tsx  (+14 more)
tools/: .env.example  README.md  _client.py  audit.py  backfill_weight_ts.js  coach_feedback.py  pyproject.toml  register-hevy-webhook.sh  rotate-hevy-key.sh  target_recommender.py
tools/tests/: test_target_recommender.py
treadmill/: README.md
treadmill/firmware/: .gitignore  platformio.ini
treadmill/firmware/include/: secrets.h.example
treadmill/firmware/src/: main.cpp
treadmill/host/: bench.py  bridge_client.py  calibrate.py  csafe.py  hr_probe.py  live.py  pyproject.toml  scan.py  test_csafe.py
(+40 files in other folders)
