[project]
name = "hack-the-body-pi-agent"
version = "0.1.0"
description = "MQTT-controlled kiosk agent for the office Pi: power, brightness, browser reload/navigate/type, reboot, screen preview."
requires-python = ">=3.11"
dependencies = [
  "paho-mqtt>=2.1",
  "pydantic-settings>=2.5",
  "httpx>=0.27",
  "websockets>=13",
  "pillow>=10.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.7",
]

[project.scripts]
htb-pi-agent = "htb_pi_agent.main:run"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/htb_pi_agent"]
